--- a/Pages/About Us/SUSPage.xaml
+++ b/Pages/About Us/SUSPage.xaml
@@ -10,9 +10,10 @@
 
     <Grid>
         <Label Content=" О нас:" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,233,0,0" FontSize="24" FontFamily="Arial"/>
-        <Label Content="Привет! Мы Polaroid - ведущая компания по производству фототехники и бытовой электроники. &#xD;&#xA;Наша миссия - сохранить важные моменты жизни и помочь клиентамделиться ими. У нас широкий &#xD;&#xA;выбор фотокамер и аксессуаров, а также бытовая электроника. Мы постоянноразвиваемся и предлагаем &#xD;&#xA;передовые инновации, гарантируя качество и надежность. Мы всегда готовы поддержать своих клиентов &#xD;&#xA;и превзойти их ожидания. Давайте вместе ощутим волшебство фотографии с Polaroid!" 
+        <Label Content="Привет! Мы Polaroid - ведущая компания по производству фототехники и бытовой электроники. &#xD;&#xA;Наша миссия - сохранить важные моменты жизни и помочь клиентам делиться ими. У нас широкий &#xD;&#xA;выбор фотокамер и аксессуаров, а также бытовая электроника. Мы постоянно развиваемся и предлагаем &#xD;&#xA;передовые инновации, гарантируя качество и надежность. Мы всегда готовы поддержать своих клиентов &#xD;&#xA;и превзойти их ожидания. Давайте вместе ощутим волшебство фотографии с Polaroid!" 
                HorizontalAlignment="Center"
                VerticalAlignment="Top"
                Margin="0,276,0,0" FontFamily="Arial" FontSize="24" HorizontalContentAlignment="Center" FontStyle="Italic"/>
+        <Button Name="Btn_Back" Content="Назад" HorizontalAlignment="Left" Margin="79,73,0,0" VerticalAlignment="Top" Height="77" Width="179" Click="Btn_Back_Click"/>
     </Grid>
 </Page>
