--- a/Pages/TovarPage/ItemPage.xaml
+++ b/Pages/TovarPage/ItemPage.xaml
@@ -9,24 +9,21 @@
       Title="ItemPage" Background="White">
 
     <Grid>
-        <Button Name="Manin_Btn" Content="Главная" HorizontalAlignment="Left" Margin="217,123,0,0" VerticalAlignment="Top" Height="35" Width="190" FontFamily="Arial" Padding="0,0,0,0" Click="Manin_Btn_Click" BorderBrush="White"/>
-        <Button Name="Category_Btn" Content="Поиск" HorizontalAlignment="Left" Margin="435,123,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial" Click="Category_Btn_Click" BorderBrush="White"/>
-        <Button Name ="Authorization_Btn" Content="Авторизация" HorizontalAlignment="Left" Margin="644,123,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial" Click="Authorization_Btn_Click" BorderBrush="#FFFFFCFC"/>
-        <Button Name="Info_Btn" Content="Об Организации" HorizontalAlignment="Left" Margin="867,123,0,0" VerticalAlignment="Top" Height="36" Width="190" FontFamily="Arial" Click="Info_Btn_Click" BorderBrush="#FFFFFCFC"/>
+        <Border BorderThickness="1" Background="#E8E8E8" Margin="598,161,230,307" CornerRadius="10"/>
         <Image HorizontalAlignment="Center" Height="117" Margin="0,10,0,0" VerticalAlignment="Top" Width="194" Source="/i.png">
             <Image.OpacityMask>
                 <ImageBrush ImageSource="/i.png"/>
             </Image.OpacityMask>
         </Image>
-        <Rectangle HorizontalAlignment="Left" Height="390" Margin="86,274,0,0" Stroke="Black" VerticalAlignment="Top" Width="410">
+        <Rectangle HorizontalAlignment="Left" Height="454" Margin="86,154,0,0" Stroke="Black" VerticalAlignment="Top" Width="410">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="/Pages/TovarPage/PhotoCamera.jpg"/>
             </Rectangle.Fill>
         </Rectangle>
-        <Button Name="Btn_Buy" Content="Купить" HorizontalAlignment="Left" Margin="745,606,0,0" VerticalAlignment="Top" Height="39" Width="157" Click="Btn_Buy_Click"/>
-        <TextBlock Name="TxbName1" HorizontalAlignment="Left" Margin="86,247,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="22" Width="410" FontSize="16" FontFamily="Arial"/>
-        <TextBlock Name="TxbDiscription1" HorizontalAlignment="Left" Margin="509,309,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="184" Width="424" FontSize="16" FontFamily="Arial"/>
-        <TextBlock Name="TxbPrice1" HorizontalAlignment="Left" Margin="531,620,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="140" Height="30" FontFamily="Arial" FontSize="16" TextAlignment="Right"/>
-        <TextBox HorizontalAlignment="Center" Margin="0,274,0,0" TextWrapping="Wrap" Text="Описание:" VerticalAlignment="Top" Width="262" Height="30" FontFamily="Arial" FontSize="16" BorderThickness="0,0,0,0"/>
+        <TextBlock x:Name="TxbName1" HorizontalAlignment="Left" Margin="86,127,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="22" Width="410" FontSize="16" FontFamily="Arial"/>
+        <TextBlock x:Name="TxbDiscription1" HorizontalAlignment="Left" Margin="606,166,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="184" Width="417" FontSize="16" FontFamily="Arial"/>
+        <TextBlock x:Name="TxbPrice1" HorizontalAlignment="Left" Margin="1077,243,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="140" Height="30" FontFamily="Arial" FontSize="16" TextAlignment="Right"/>
+        <Label Content="Наличие в магазинах:" HorizontalAlignment="Center" Margin="0,473,0,0" VerticalAlignment="Top" Width="142"/>
+        <TextBlock Name="TxbAdress1" HorizontalAlignment="Left" Margin="569,504,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="21" Width="328"/>
     </Grid>
 </Page>
