--- a/Pages/TovarPage/ItemPage.xaml
+++ b/Pages/TovarPage/ItemPage.xaml
@@ -9,7 +9,7 @@
       Title="ItemPage" Background="White">
 
     <Grid>
-        <Border BorderThickness="1" Background="#E8E8E8" Margin="598,161,230,307" CornerRadius="10"/>
+        <Border BorderThickness="1" Background="#E8E8E8" Margin="561,161,267,307" CornerRadius="10"/>
         <Image HorizontalAlignment="Center" Height="117" Margin="0,10,0,0" VerticalAlignment="Top" Width="194" Source="/i.png">
             <Image.OpacityMask>
                 <ImageBrush ImageSource="/i.png"/>
@@ -21,9 +21,10 @@
             </Rectangle.Fill>
         </Rectangle>
         <TextBlock x:Name="TxbName1" HorizontalAlignment="Left" Margin="86,127,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="22" Width="410" FontSize="16" FontFamily="Arial"/>
-        <TextBlock x:Name="TxbDiscription1" HorizontalAlignment="Left" Margin="606,166,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="184" Width="417" FontSize="16" FontFamily="Arial"/>
-        <TextBlock x:Name="TxbPrice1" HorizontalAlignment="Left" Margin="1077,243,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="140" Height="30" FontFamily="Arial" FontSize="16" TextAlignment="Right"/>
-        <Label Content="Наличие в магазинах:" HorizontalAlignment="Center" Margin="0,473,0,0" VerticalAlignment="Top" Width="142"/>
-        <TextBlock Name="TxbAdress1" HorizontalAlignment="Left" Margin="569,504,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="21" Width="328"/>
+        <TextBlock x:Name="TxbDiscription1" HorizontalAlignment="Left" Margin="569,166,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="184" Width="417" FontSize="16" FontFamily="Arial"/>
+        <TextBlock x:Name="TxbPrice1" HorizontalAlignment="Left" Margin="1057,243,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="140" Height="30" FontFamily="Arial" FontSize="16" TextAlignment="Right"/>
+        <Label Content="Наличие в магазинах:" HorizontalAlignment="Left" Margin="561,471,0,0" VerticalAlignment="Top" Width="194" FontFamily="Arial" FontSize="16"/>
+        <TextBlock Name="TxbAdress1" HorizontalAlignment="Left" Margin="569,504,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="21" Width="282" FontFamily="Arial" FontSize="16"/>
+        <Button Name="BtnBack" Content="Назад" HorizontalAlignment="Left" Margin="82,36,0,0" VerticalAlignment="Top" Height="57" Width="209" Click="BtnBack_Click"/>
     </Grid>
 </Page>
